<resources>
    <string name="app_name">积累</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码（必填）</string>
    <string name="action_sign_in_short">登录</string>
    <string name="action_sign_in">登录</string>
    <string name="mobile_not_be_null">手机号不得为空</string>
    <string name="pwd_not_be_null">密码不得为空</string>
    <string name="mobile_format_error">手机格式错误</string>
    <string name="login_failed">登录失败</string>
    <string name="loading">加载中&#8230;</string>
    <string name="navigation_drawer_open">drawer open</string>
    <string name="navigation_drawer_close">drawer close</string>
    <string name="pic">picture</string>
    <string name="other">其他</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="goal">目标</string>
    <string name="statistics">统计</string>
    <string name="login">登录</string>
    <string name="logining">正在登录&#8230;</string>
    <string name="mine">个人中心</string>
    <string name="switch_user">切换用户</string>
    <string name="head_pic">头像</string>
    <string name="name">名字</string>
    <string name="phone">手机</string>
    <string name="unsetting">未设置</string>
    <string name="cancel">取消</string>
    <string name="ensure">确认</string>
    <string name="add_goal">添加目标</string>
    <string name="goal_name">目标名</string>
    <string name="propaganda">积累，让努力看得见。</string>
    <string name="all_right">All Right Reserved.</string>
    <string name="copyright">Copyright ©2016–2017 Relish</string>
    <string name="feedback">反馈</string>
    <string name="url_is_null">网址为空！</string>
    <string name="no_google_play">您的手机上未安装GooglePlay！</string>
    <string name="comment">评价</string>
    <string name="feedback_subject">来自【%s】的用户反馈</string>
    <string name="feedback_text">请问您对本应用【%s】有什么意见或建议呢？\\n</string>
    <string name="forget_password">忘记密码</string>
    <string name="new_user">新用户注册</string>
    <string name="delete">删除</string>
    <string name="delete_goal_message">是否删除【%s】及其全部记录？</string>
    <string name="add_record">添加记录</string>
    <string name="delete_record_message">是否删除记录【%s】？</string>
    <string name="record_name">记录名</string>
    <string name="account_or_password_is_not_collect">账号或密码不正确</string>
    <string name="register">注册</string>
    <string name="mobile">手机</string>
    <string name="verification_code">验证码</string>
    <string name="password">密码</string>
    <string name="repeat_password">重复密码</string>
    <string name="save">注册</string>
    <string name="permission_denied_message">拒绝权限将无法使用此软件</string>
    <string name="verify_code_error">验证码不正确</string>
    <string name="please_input_correct_verify_code">请输入完整验证码</string>
    <string name="send_verfiy_code_message">【积累】验证码：%s。切勿将验证码泄漏于他人。</string>
    <string name="phone_number_error">请输入完整电话号码</string>
    <string name="phone_number_empty">请输入您的电话号码</string>
    <string name="untitle">未分类</string>
    <string name="title">归标</string>
    <string name="start_accumulation_long">开始积累</string>
    <string name="start_accumulation">积累</string>
    <string name="disabled_message">快捷方式已失效,可手动移除</string>
    <string name="modify_name">修改名字</string>
    <string name="modify_mobile">修改手机号</string>
    <string name="modify_head">更改头像</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>

    <array name="goal_long_click">
        <item>添加记录</item>
        <item>删除目标</item>
        <item>取消</item>
    </array>
    <array name="record_long_click">
        <item>查看记录</item>
        <item>删除记录</item>
        <item>取消</item>
    </array>
    <array name="week">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
    </array>
    <string-array name="set_head_click">
        <item>拍照</item>
        <item>选择照片</item>
        <item>取消</item>
    </string-array>
</resources>
