<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_3"
    android:orientation="vertical">

    <TextView
        android:id="@+id/v_camera"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/camera"
        android:textColor="@color/black_1"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/v_album"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/album"
        android:textColor="@color/black_1"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/v_cancel"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/light_red"
        android:textSize="18dp" />

</LinearLayout>