<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="none"
    tools:context=".ui.activity.MineActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/include_line" />

        <RelativeLayout
            android:id="@+id/rl_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_click_selector"
            android:onClick="onClick">

            <TextView
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="@string/head_pic"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/iv_head"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/head_default" />
        </RelativeLayout>

        <include layout="@layout/include_line" />

        <View
            android:layout_width="1dp"
            android:layout_height="16dp" />

        <include layout="@layout/include_line" />


        <RelativeLayout
            android:id="@+id/rl_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_click_selector"
            android:onClick="onClick">

            <TextView
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="@string/name"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:textColor="@color/content_hint_color"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <include layout="@layout/include_line" />


        <View
            android:layout_width="1dp"
            android:layout_height="16dp" />

        <include layout="@layout/include_line" />

        <RelativeLayout
            android:id="@+id/rl_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_click_selector"
            android:onClick="onClick">

            <TextView
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="@string/phone"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_mobile"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:textColor="@color/colorPrimary"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <include layout="@layout/include_line" />


        <RelativeLayout
            android:id="@+id/rl_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/simple_click_selector"
            android:onClick="onClick">

            <TextView
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:text="@string/email"
                tools:ignore="RelativeOverlap" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/ContentText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="16dp"
                android:textColor="@color/content_hint_color"
                tools:ignore="RelativeOverlap" />

        </RelativeLayout>

        <include layout="@layout/include_line" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="36dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/btn_logout_selector"
            android:gravity="center"
            android:onClick="onClick"
            android:padding="8dp"
            android:text="@string/switch_user"
            android:textColor="@android:color/white"
            android:textSize="22sp" />

    </LinearLayout>

</ScrollView>