<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:contentDescription="@string/app_name"
                android:src="@mipmap/icon" />

            <LinearLayout
                android:id="@+id/ll_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:text="@string/app_name"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:text="@string/propaganda"
                android:textSize="20sp"
                android:textStyle="italic" />


            <RelativeLayout
                android:id="@+id/rl_blog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_click_selector"
                android:onClick="onClick"

                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="我的博客"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/arrow_right" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/simple_click_selector"
                android:onClick="onClick"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="我的GitHub"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/arrow_right" />

            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="64dp"
            android:text="@string/copyright"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_all_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_below="@id/copyright"
            android:layout_centerHorizontal="true"
            android:paddingTop="4dp"
            android:text="@string/all_right"
            android:textSize="12sp" />


    </RelativeLayout>
</ScrollView>